# ros2_rolling_bebop_uav

./: CMakeLists.txt  README.md  README.txt  package.xml
config/: calibration_data.pkl  ros_data.pkl
data/: bebop_log_20251105_234848.csv  bebop_log_20251105_235441.csv  bebop_log_20251105_235953.csv  bebop_log_20251106_000631.csv  bebop_log_20251106_000912.csv  bebop_log_20251106_001152.csv  bebop_log_20251106_001512.csv  bebop_log_20251106_001730.csv  bebop_log_20251106_002046.csv  bebop_log_20251106_002312.csv  bebop_log_20251106_002836.csv  bebop_log_20251106_003135.csv  bebop_log_20251106_003357.csv  bebop_log_20251106_003701.csv  bebop_log_20251106_003939.csv  bebop_log_20251106_004302.csv  bebop_log_20251106_004408.csv  bebop_log_20251106_004647.csv  bebop_log_20251106_005147.csv  bebop_log_20251106_005458.csv  bebop_log_20251106_005819.csv  bebop_log_20251106_010348.csv  bebop_log_20251106_010632.csv  bebop_log_20251106_010947.csv  bebop_log_20251106_011208.csv  bebop_log_20251106_011555.csv  bebop_log_20251106_012112.csv  bebop_log_20251106_012318.csv  bebop_log_20251106_012614.csv  bebop_log_20251106_013134.csv  bebop_log_20251106_013142.csv  bebop_log_20251106_013707.csv  bebop_log_20251106_013902.csv  bebop_log_20251106_014218.csv  bebop_log_20251106_014718.csv  bebop_log_20251106_014733.csv  bebop_log_20251106_022057.csv  bebop_log_20251106_022414.csv  bebop_log_20251106_022649.csv  bebop_log_20251106_022935.csv  (+48 more)
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/nero_drone/share/nero_drone/: package.bash  package.zsh
launch/: cam_control.launch.py  full_bebop.launch.py  hello_launch.py  joy_full_bebop.launch.py  only_control.launch.py  ref_trayectory.py
log/: latest_build
nero_drone/: bebop_control_gui.py  bebop_log.csv  calibration_publish.py  controlador.py  grahps.py  graphical.py  hello_py.py  inv_vrx.py  pid_tunning.py  ref_pos.py  ref_rviz.py  ref_trayectory.py  simulacion_trayectory.py  vrx.py
others/: VelToControlInput.cpp  VelocityControllerBody.cpp  bebop2.rviz  compensation.cpp  plot.py  tf_cam copy.cpp  tf_cam.cpp  ultimo_tf_cam.cpp
scripts/: camera_calibration.py  ros_cam_data.py
src/: InverseDynamicController.cpp  Joy2Cmd.cpp  KalmanNode.cpp  RefPublisher.cpp  VelToControlInput.cpp  VelocityControllerBody.cpp  apriltag_node.cpp  beboptag.cpp  bridge_cmd.cpp  filtred.cpp  isfly.cpp  land.cpp  poseref.cpp  position_control.cpp  safe_watchdog.cpp  tagfollow.cpp  tf_cam.cpp  tf_tag_bebop.cpp  velocity_logger.cpp  visual.cpp
